--- a/src/scripts/Serialization/App_Config/Include/AvenueClothing.Serialization.config
+++ b/src/scripts/Serialization/App_Config/Include/AvenueClothing.Serialization.config
@@ -3,7 +3,7 @@
     <unicorn>
       <configurations>
         <configuration name="Project.AvenueClothing.Website" description="AvenueClothing content">
-          <targetDataStore physicalRootPath="C:\projects\Avenue Clothing for Sitecore\src\project\AvenueClothing\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true" />
+          <targetDataStore physicalRootPath="C:\Projects\AvenueClothing\src\project\AvenueClothing-CC\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true" />
           <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance="true">
             <include name="Avenue Clothing" database="master" path="/sitecore/content" />
             <include name="Templates" database="master" path="/sitecore/templates/Common" />
