--- a/src/AvenueClothing.Project.Website/packages.config
+++ b/src/AvenueClothing.Project.Website/packages.config
@@ -6,8 +6,9 @@
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
   <package id="Kamsar.WebConsole" version="1.2.2.0" targetFramework="net461" />
   <package id="MicroCHAP" version="1.2.1.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
