Remove installation.config and reuse serialization.config instead.

--- a/src/scripts/Serialization/App_Config/Include/AvenueClothing.Serialization.config
+++ b/src/scripts/Serialization/App_Config/Include/AvenueClothing.Serialization.config
@@ -1,19 +1,21 @@
-<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
+ <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
     <unicorn>
       <configurations>
-        <configuration name="Project.AvenueClothing.Website" description="AvenueClothing content">
-          <targetDataStore physicalRootPath="C:\projects\Avenue Clothing for Sitecore\src\project\AvenueClothing\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true" />
-          <predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance="true">
-            <include name="Avenue Clothing" database="master" path="/sitecore/content" />
-            <include name="Templates" database="master" path="/sitecore/templates/Common" />
-            <include name="Renderings" database="master" path="/sitecore/Layout/Renderings" />
-            <include name="Layouts" database="master" path="/sitecore/Layout/Layouts" />
-            <include name="Placeholder Settings" database="master" path="/sitecore/Layout/Placeholder Settings" />
-            <include name="Images" database="master" path="/sitecore/media library/Images" />
-          </predicate>
-          <syncConfiguration type="Unicorn.Loader.DefaultSyncConfiguration, Unicorn" singleInstance="true" updateLinkDatabase="false" updateSearchIndex="true" maxConcurrency="1" />
-        </configuration>
+				<configuration name="Project.AvenueClothing.Website" description="AvenueClothing content for installation" >
+					<targetDataStore physicalRootPath="$(dataFolder)\tmp\accelerator\AvenueClothing\serialization" type="Rainbow.Storage.SerializationFileSystemDataStore, Rainbow" useDataCache="false" singleInstance="true" />
+					<predicate type="Unicorn.Predicates.SerializationPresetPredicate, Unicorn" singleInstance="true">
+
+						<include name="Avenue Clothing" database="master" path="/sitecore/content"/>
+						<include name="Templates" database="master" path="/sitecore/templates/Common"/>
+						<include name="Renderings" database="master" path="/sitecore/Layout/Renderings"/>
+						<include name="Layouts" database="master" path="/sitecore/Layout/Layouts"/>
+						<include name="Placeholder Settings" database="master" path="/sitecore/Layout/Placeholder Settings"/>
+						<include name="Images" database="master" path="/sitecore/media library/Images"/>
+						
+					</predicate>
+					<syncConfiguration type="Unicorn.Loader.DefaultSyncConfiguration, Unicorn" singleInstance="true" updateLinkDatabase="false" updateSearchIndex="true" maxConcurrency="1" />
+				</configuration>
       </configurations>
     </unicorn>
   </sitecore>
