Some versions of Sitecore does not ship a web.config under views folder. Add bare minimum web.config if doesn't exists.

--- a/src/AvenueClothing.Installer/AvenueClothing.Installer.csproj
+++ b/src/AvenueClothing.Installer/AvenueClothing.Installer.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Pipelines\Installation\Tasks\CreateUCommerceSettingsTask.cs" />
     <Compile Include="Pipelines\Installation\Tasks\MoveSitecoreConfigurationFilesTask.cs" />
     <Compile Include="Pipelines\Installation\Tasks\PublishMasterDatabaseTask.cs" />
+    <Compile Include="Pipelines\Installation\Tasks\RenameWebConfigIfMissingTask.cs" />
     <Compile Include="Pipelines\Installation\Tasks\RunScratchIndexerTask.cs" />
     <Compile Include="Pipelines\Installation\Tasks\SynchronizeSitecoreItemsTask.cs" />
     <Compile Include="Pipelines\Installation\Tasks\UpdateStandardValuesForDefinitionsTask.cs" />
