--- a/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
+++ b/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
@@ -15,6 +15,7 @@
             <value>${AvenueClothing.InstallationPipeline.ClearSitecoreCache}</value>
             <value>${AvenueClothing.InstallationPipeline.PublishMasterDatabase}</value>
             <value>${AvenueClothing.InstallationPipeline.MoveSitecoreConfigurationFiles}</value>
+            <value>${AvenueClothing.InstallationPipeline.RenameWebConfigIfMissing}</value>
           </array>
         </tasks>
       </parameters>
@@ -53,6 +54,10 @@
     <component id="AvenueClothing.InstallationPipeline.UpdateStandardValuesForDefinitions"
        service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.UpdateStandardValuesForDefinitionsTask, AvenueClothing.Installer" />
+
+    <component id="AvenueClothing.InstallationPipeline.RenameWebConfigIfMissing"
+       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.RenameWebConfigIfMissingTask, AvenueClothing.Installer" />
 
   </components>
 </configuration>
