--- a/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
+++ b/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
@@ -237,6 +237,7 @@
     <Content Include="Scripts\jquery-3.0.0.min.map" />
     <Content Include="Views\Footer\Rendering.cshtml" />
     <Content Include="Views\Sidebar Static Content\Rendering.cshtml" />
+    <None Include="Views\Web.config.default" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\AvenueClothingHttpModule.cs" />
