--- a/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Static/Sidebar Static Content.yml
+++ b/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Static/Sidebar Static Content.yml
@@ -7,7 +7,7 @@ DB: master
 SharedFields:
 - ID: "51b435bc-f7b9-478a-9c51-52916af96ff5"
   Hint: Path
-  Value: ~/Views/Sidebar Static Content/Rendering.cshtml
+  Value: /Views/Sidebar Static Content/Rendering.cshtml
 Languages:
 - Language: en
   Versions:
