Cart.yml changed to include Voucher

--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Basket.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Basket.yml
@@ -25,7 +25,7 @@ SharedFields:
           uid="{655D4995-F357-411B-BA1F-E56D7578C23C}" />
         <r
           id="{AA92D865-76BA-4A80-ABD9-BC6E7CE83687}"
-          ph="breadcrumb"
+          ph="main"
           uid="{0747E1DE-2940-41F1-8058-5E5B6D306DDB}" />
         <r
           id="{749D4A8D-990A-4FFE-BE3A-C74591EBD862}"
