--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Shipping.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Shipping.yml
@@ -37,6 +37,14 @@ SharedFields:
           id="{E5C76A34-378F-4808-957B-2C055AE08BCB}"
           ph="header content"
           uid="{7F288D10-CA2D-4C4B-9559-F7646CCCB0D5}" />
+        <r
+          id="{51F0AFD0-376F-43B5-B425-CFB19E0A6C7D}"
+          ph="sidebar"
+          uid="{A1AD936B-0529-45ED-8D02-49BD543F1026}" />
+        <r
+          id="{F45E27B0-D4C0-4C0C-9CCC-CC9F5203F30D}"
+          ph="footer"
+          uid="{89271689-85DC-41B3-9C49-D704E59400FB}" />
       </d>
     </r>
 Languages:
