--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Address.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Address.yml
@@ -37,6 +37,14 @@ SharedFields:
           id="{E5C76A34-378F-4808-957B-2C055AE08BCB}"
           ph="header content"
           uid="{AC82DF9F-1440-4EB9-82D3-A663DE3E7B75}" />
+        <r
+          id="{51F0AFD0-376F-43B5-B425-CFB19E0A6C7D}"
+          ph="sidebar"
+          uid="{2EDE9C23-C745-467F-8060-C1B723126439}" />
+        <r
+          id="{F45E27B0-D4C0-4C0C-9CCC-CC9F5203F30D}"
+          ph="footer"
+          uid="{D642F81D-9D31-4A12-AFE2-7A6F320B357E}" />
       </d>
     </r>
 Languages:
