--- a/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
+++ b/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Controllers\AddressController.cs" />
     <Compile Include="Controllers\MiniBasketController.cs" />
     <Compile Include="Controllers\VariantPickerController.cs" />
+    <Compile Include="Controllers\ConfirmationEmailController.cs" />
     <Compile Include="Controllers\VoucherController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IMiniBasketService.cs" />
@@ -145,6 +146,7 @@
     <Compile Include="ViewModels\AddressSaveViewModel.cs" />
     <Compile Include="ViewModels\BasketUpdateBasket.cs" />
     <Compile Include="ViewModels\BasketUpdateBasketViewModel.cs" />
+    <Compile Include="ViewModels\ConfirmationEmailViewModel.cs" />
     <Compile Include="ViewModels\ConfirmationViewModel.cs" />
     <Compile Include="ViewModels\BasketRenderingViewModel.cs" />
     <Compile Include="ViewModels\AddressRenderingViewModel.cs" />
@@ -170,6 +172,7 @@
     <Content Include="Scripts\jsAddress.js" />
     <Content Include="Scripts\jsMiniBasket.js" />
     <Content Include="Scripts\jsAddToBasketButton.js" />
+    <Content Include="Views\ConfirmationEmail\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jsPaymentPicker.js" />
