--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing.yml
@@ -86,7 +86,8 @@ Languages:
       Value: 20160927T103226Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
-      Value: sitecore\admin
+      Value: |
+        sitecore\admin
     - ID: "9336b4dd-e895-4a97-a252-5ebf3776b8a1"
       Hint: Products
       Type: Treelist
