--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/ConfirmationEmail.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/ConfirmationEmail.yml
@@ -37,5 +37,5 @@ Languages:
       Value: 20161006T134112Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
-      Value: sitecore\admin
-      
+      Value: |
+        sitecore\admin
