--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Basket.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Basket.yml
@@ -43,4 +43,5 @@ Languages:
       Value: 20161019T074056Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
-      Value: sitecore\admin
+      Value: |
+        sitecore\admin
