--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Confirmation.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Confirmation.yml
@@ -23,7 +23,7 @@ SharedFields:
           uid="{A38550B0-00FC-4629-A2DB-092270F65B2F}" />
         <r
           id="{514E5AAF-527A-4D2B-9124-9C3FADC8EA2D}"
-          ph="main" 
+          ph="main"
           uid="{36DCAA04-7643-469B-926F-1936B279E24E}" />
         <r
           id="{749D4A8D-990A-4FFE-BE3A-C74591EBD862}"
@@ -53,7 +53,8 @@ Languages:
       Value: 20161111T110519Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
-      Value: sitecore\admin
+      Value: |
+        sitecore\admin
     - ID: "a7914204-1cb0-42aa-a34c-e9abeee8e564"
       Hint: Headline
       Value: "Thank you for your order!"
