--- a/src/project/AvenueClothing-CC/serialization/Layouts/Layouts/Avenue Clothing/Layout.yml
+++ b/src/project/AvenueClothing-CC/serialization/Layouts/Layouts/Avenue Clothing/Layout.yml
@@ -8,6 +8,24 @@ SharedFields:
 - ID: "a036b2bc-ba04-44f6-a75f-bae6cd242abf"
   Hint: Path
   Value: /Views/Layout.cshtml
+- ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
+  Hint: __Renderings
+  Type: layout
+  Value: |
+    <r xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+      <d
+        id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}"
+        l="{55AD3180-3D79-461F-AC6F-D679AB58A849}">
+        <r
+          id="{878E2B49-315C-4EFE-8D26-52605F78C3D6}"
+          ph="header"
+          uid="{B50A9C34-3986-43C9-9C08-5BA9B63E0246}" />
+        <r
+          id="{E5C76A34-378F-4808-957B-2C055AE08BCB}"
+          ph="header content"
+          uid="{83097426-E068-493D-8D1D-0BA2FD47FFF3}" />
+      </d>
+    </r>
 Languages:
 - Language: en
   Versions:
