--- a/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/Transaction/Mini Basket.yml
+++ b/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/Transaction/Mini Basket.yml
@@ -16,7 +16,7 @@ SharedFields:
   Value: Rendering
 - ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
   Hint: Controller
-  Value: CommerceConnectMiniBasket
+  Value: MiniBasket
 Languages:
 - Language: en
   Versions:
