--- a/src/project/AvenueClothing-CC/serialization/Avenue Clothing/content/AvenueClothing/Confirmation.yml
+++ b/src/project/AvenueClothing-CC/serialization/Avenue Clothing/content/AvenueClothing/Confirmation.yml
@@ -1,7 +1,7 @@
 ﻿---
-ID: "20cdc961-8068-4eae-bf6b-c13acd0c8b11"
+ID: "7fd5dc61-4d6d-4d20-9cba-5ea98706c57f"
 Parent: "7919567a-faa2-4504-9c31-63a2cf67b551"
-Template: "3870177d-3bc6-46dc-9594-13860b542060"
+Template: "6aa89888-a32b-4605-a057-09c226df4a8d"
 Path: /sitecore/content/AvenueClothing/Confirmation
 DB: master
 SharedFields:
@@ -16,23 +16,31 @@ SharedFields:
         <r
           id="{878E2B49-315C-4EFE-8D26-52605F78C3D6}"
           ph="header"
-          uid="{9C3DD5D7-6130-4767-BFE9-F73FF3F48B90}" />
-        <r
-          id="{EBBE7524-3356-47AC-852A-8EE1DD93CAD6}"
-          ph="header content"
-          uid="{C4E2EBFF-8382-48CB-9D20-9D91CB314A15}" />
-        <r
-          id="{749D4A8D-990A-4FFE-BE3A-C74591EBD862}"
-          ph="sidebar"
-          uid="{487A0A85-C33B-44AB-AC30-CBA3A196487E}" />
-        <r
-          id="{514E5AAF-527A-4D2B-9124-9C3FADC8EA2D}"
-          ph="main"
-          uid="{EE9EC8DD-B41A-4141-8E6E-17B8D989ECE8}" />
+          uid="{3514E18D-EC0C-4519-B512-9FFEBD84369F}" />
         <r
           id="{E5C76A34-378F-4808-957B-2C055AE08BCB}"
           ph="header content"
-          uid="{725A8AAF-3A9D-4287-A83E-1F13065BDECB}" />
+          uid="{A38550B0-00FC-4629-A2DB-092270F65B2F}" />
+        <r
+          id="{514E5AAF-527A-4D2B-9124-9C3FADC8EA2D}"
+          ph="main"
+          uid="{36DCAA04-7643-469B-926F-1936B279E24E}" />
+        <r
+          id="{749D4A8D-990A-4FFE-BE3A-C74591EBD862}"
+          ph="sidebar"
+          uid="{87292D9B-68EF-4BCF-8C0B-20266685C809}" />
+        <r
+          id="{51F0AFD0-376F-43B5-B425-CFB19E0A6C7D}"
+          ph="sidebar"
+          uid="{36688D14-DDEA-42DE-9431-D8035B998837}" />
+        <r
+          id="{F45E27B0-D4C0-4C0C-9CCC-CC9F5203F30D}"
+          ph="footer"
+          uid="{B35ADAEF-EE60-4985-8C43-3B8E7E30E8B3}" />
+        <r
+          id="{EBBE7524-3356-47AC-852A-8EE1DD93CAD6}"
+          ph="header content"
+          uid="{5E7D6A4F-95FA-4151-ABEE-0D0755D40C2D}" />
       </d>
     </r>
 Languages:
@@ -42,7 +50,14 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161006T125523Z
+      Value: 20161111T110519Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
-      Value: sitecore\admin
+      Value: |
+        sitecore\admin
+    - ID: "a7914204-1cb0-42aa-a34c-e9abeee8e564"
+      Hint: Headline
+      Value: "Thank you for your order!"
+    - ID: "d2beac0f-56ee-493d-851d-362ed9f30128"
+      Hint: Message
+      Value: An order confirmation email has been sent to your email address.
