--- a/src/project/AvenueClothing-CC/serialization/Avenue Clothing/content/AvenueClothing/Preview.yml
+++ b/src/project/AvenueClothing-CC/serialization/Avenue Clothing/content/AvenueClothing/Preview.yml
@@ -26,6 +26,10 @@ SharedFields:
           ph="sidebar"
           uid="{9F71F427-F6A4-447E-AA67-466576246C12}" />
         <r
+          id="{AA92D865-76BA-4A80-ABD9-BC6E7CE83687}"
+          ph="main"
+          uid="{828C9432-9363-424B-8191-7AD66CC41902}" />
+        <r
           id="{A56E9C47-09B5-443D-BA4F-26CC617E50AB}"
           ph="main"
           uid="{14A4BF28-E51A-40AA-9730-F4DD4A1628F9}" />
@@ -33,6 +37,14 @@ SharedFields:
           id="{E5C76A34-378F-4808-957B-2C055AE08BCB}"
           ph="header content"
           uid="{D4BAFA4E-0554-4264-B028-D09338390832}" />
+        <r
+          id="{51F0AFD0-376F-43B5-B425-CFB19E0A6C7D}"
+          ph="sidebar"
+          uid="{EA2AEDF7-B0FD-4EE6-8D50-916842D4D220}" />
+        <r
+          id="{F45E27B0-D4C0-4C0C-9CCC-CC9F5203F30D}"
+          ph="footer"
+          uid="{7937EA72-99F3-49BB-8B2E-09168A173B37}" />
       </d>
     </r>
 Languages:
@@ -45,4 +57,5 @@ Languages:
       Value: 20161006T125647Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
-      Value: sitecore\admin
+      Value: |
+        sitecore\admin
