--- a/src/project/AvenueClothing-CC/serialization/Avenue Clothing/content/Home.yml
+++ b/src/project/AvenueClothing-CC/serialization/Avenue Clothing/content/Home.yml
@@ -43,7 +43,8 @@ Languages:
       Value: "20140516T182531:635358615311709544"
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
-      Value: sitecore\admin
+      Value: |
+        sitecore\admin
     - ID: "75577384-3c97-45da-a847-81b00500e250"
       Hint: Title
       Value: Sitecore
@@ -69,7 +70,8 @@ Languages:
       Value: "20140516T175833:635358599136286942"
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
-      Value: sitecore\admin
+      Value: |
+        sitecore\admin
     - ID: "75577384-3c97-45da-a847-81b00500e250"
       Hint: Title
       Value: Sitecore Experience Plattform
@@ -94,7 +96,8 @@ Languages:
       Value: 20080407T105900Z
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
-      Value: sitecore\admin
+      Value: |
+        sitecore\admin
     - ID: "75577384-3c97-45da-a847-81b00500e250"
       Hint: Title
       Value: Sitecore Experience Platform
@@ -122,7 +125,8 @@ Languages:
       Value: "20140516T185403:635358632434514719"
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
-      Value: sitecore\admin
+      Value: |
+        sitecore\admin
     - ID: "75577384-3c97-45da-a847-81b00500e250"
       Hint: Title
       Value: サイトコア エクスペリエンス プラットフォームへようこそ
