--- a/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/Catalog/Product Action Buttons.yml
+++ b/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/Catalog/Product Action Buttons.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "a56e9c47-09b5-443d-ba4f-26cc617e50ab"
-Parent: "f5cf3be4-c675-4392-8eaf-157117398b3a"
+ID: "674dab73-b22c-4e59-a931-5ad911250f4d"
+Parent: "ea28baf4-62fa-4fa9-80f9-07c39608e5e7"
 Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
-Path: /sitecore/layout/Renderings/Commerce/Transaction/Basket Preview
+Path: /sitecore/layout/Renderings/Commerce/Catalog/Product Action Buttons
 DB: master
 SharedFields:
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
@@ -10,7 +10,7 @@ SharedFields:
   Value: Rendering
 - ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
   Hint: Controller
-  Value: BasketPreview
+  Value: ProductWellWithPickersAndButton
 Languages:
 - Language: en
   Versions:
@@ -18,4 +18,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161101T124152Z
+      Value: 20161207T093313Z
