--- a/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/Navigation/Breadcrumbs.yml
+++ b/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/Navigation/Breadcrumbs.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "7d06ef2a-90ff-4b65-bd71-b43df68ca894"
-Parent: "ea28baf4-62fa-4fa9-80f9-07c39608e5e7"
+ID: "aa92d865-76ba-4a80-abd9-bc6e7ce83687"
+Parent: "4b8a276f-c8f2-46f3-9f8b-b38a9ff54c0c"
 Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
-Path: /sitecore/layout/Renderings/Commerce/Catalog/Quantity Picker
+Path: /sitecore/layout/Renderings/Commerce/Navigation/Breadcrumbs
 DB: master
 SharedFields:
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
@@ -10,7 +10,7 @@ SharedFields:
   Value: Rendering
 - ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
   Hint: Controller
-  Value: QuantityPicker
+  Value: Breadcrumb
 Languages:
 - Language: en
   Versions:
@@ -18,4 +18,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161014T070734Z
+      Value: 20161014T132413Z
