--- a/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/Static/Footer.yml
+++ b/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/Static/Footer.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "395cc694-42b4-45d5-a3d5-81da55de6ce4"
-Parent: "ea28baf4-62fa-4fa9-80f9-07c39608e5e7"
+ID: "f45e27b0-d4c0-4c0c-9ccc-cc9f5203f30d"
+Parent: "aed5414e-7f03-469e-9c91-b3c4b3d2a1c0"
 Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
-Path: /sitecore/layout/Renderings/Commerce/Catalog/Review List
+Path: /sitecore/layout/Renderings/Commerce/Static/Footer
 DB: master
 SharedFields:
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
@@ -10,7 +10,7 @@ SharedFields:
   Value: Rendering
 - ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
   Hint: Controller
-  Value: ReviewList
+  Value: Footer
 Languages:
 - Language: en
   Versions:
@@ -18,4 +18,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161018T132844Z
+      Value: 20161207T142442Z
