--- a/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/Transaction/AddToBasketButton.yml
+++ b/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/Transaction/AddToBasketButton.yml
@@ -10,7 +10,7 @@ SharedFields:
   Value: Rendering
 - ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
   Hint: Controller
-  Value: CommerceConnectAddToBasketButton
+  Value: AddToBasketButton
 Languages:
 - Language: en
   Versions:
