--- a/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/User Feedback.yml
+++ b/src/project/AvenueClothing-CC/serialization/Renderings/Renderings/Commerce/User Feedback.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "3a5a2f28-52ee-4cb3-b649-eb1ac2d43b82"
+ID: "a1ddb7a9-ed3f-4ada-96e8-30909cfe69b8"
 Parent: "b6e137f9-4ecc-4555-bab1-a31ee5f17e01"
 Template: "7ee0975b-0698-493e-b3a2-0b2ef33d0522"
-Path: /sitecore/layout/Renderings/Commerce/General
+Path: /sitecore/layout/Renderings/Commerce/User Feedback
 DB: master
 Languages:
 - Language: en
@@ -11,4 +11,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161013T144034Z
+      Value: 20161111T093542Z
