--- a/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
+++ b/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
@@ -197,7 +197,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Css\font-awesome.min.css" />
-    <Content Include="Css\fontawesome-webfont.svg" />
+    <Content Include="Css\fontawesome-webfont.svg">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Css\glyphicons-28-search.png" />
     <Content Include="Css\glyphicons-halflings-regular.svg" />
     <Content Include="Css\tether.min.css" />
