Added Abandoned checkout and come back banner.

--- a/src/AvenueClothing.Installer/AvenueClothing.Installer.csproj
+++ b/src/AvenueClothing.Installer/AvenueClothing.Installer.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Pipelines\Initialize\SynchronizeSitecoreItemsTask.cs" />
     <Compile Include="Pipelines\Installation\InstallationPipeline.cs" />
     <Compile Include="Pipelines\Installation\Tasks\ClearSitecoreCacheTask.cs" />
+    <Compile Include="Pipelines\Installation\Tasks\CreateMarketingCampaign.cs" />
     <Compile Include="Pipelines\Installation\Tasks\CreateUCommerceCatalogTask.cs" />
     <Compile Include="Pipelines\Installation\Tasks\CreateUCommerceSettingsTask.cs" />
     <Compile Include="Pipelines\Installation\Tasks\MoveSitecoreConfigurationFilesTask.cs" />
