--- a/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
+++ b/src/AvenueClothing.Installer/sitecore modules/Shell/uCommerce/Apps/Avenue Clothing/Pipelines/Installation/Installation.config
@@ -9,6 +9,7 @@
           <array>
             <value>${AvenueClothing.InstallationPipeline.CreateUCommerceSettings}</value>
             <value>${AvenueClothing.InstallationPipeline.CreateUCommerceCatalog}</value>
+            <value>${AvenueClothing.InstallationPipeline.CreateMarketingCampaign}</value>
             <value>${AvenueClothing.InstallationPipeline.UpdateStandardValuesForDefinitions}</value>
             <value>${AvenueClothing.InstallationPipeline.RunScratchIndexer}</value>
             <value>${AvenueClothing.InstallationPipeline.SynchronizeSitecoreItems}</value>
@@ -29,6 +30,10 @@
     <component id="AvenueClothing.InstallationPipeline.CreateUCommerceCatalog"
        service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
        type="AvenueClothing.Installer.Pipelines.Installation.Tasks.CreateUCommerceCatalogTask, AvenueClothing.Installer" />
+
+    <component id="AvenueClothing.InstallationPipeline.CreateMarketingCampaign"
+       service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
+       type="AvenueClothing.Installer.Pipelines.Installation.Tasks.CreateMarketingCampaign, AvenueClothing.Installer" />
 
     <component id="AvenueClothing.InstallationPipeline.CreateUCommerceSettings"
        service="UCommerce.Pipelines.IPipelineTask`1[[AvenueClothing.Installer.Pipelines.Installation.InstallationPipelineArgs, AvenueClothing.Installer]], UCommerce"
