--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Data Sources/Banner Messages/Abandoned Checkout.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Data Sources/Banner Messages/Abandoned Checkout.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "541fdec1-460b-4b26-8d50-92b5cc7cf4e3"
+ID: "b1a808e4-8ee7-48e0-b458-4332b144026c"
 Parent: "a21265c5-0ae3-4d85-894b-a93f705aa658"
 Template: "8646351d-2312-4d5c-9022-dc9b67fbb45d"
-Path: /sitecore/content/AvenueClothing/Data Sources/Banner Messages/Basket is not empty
+Path: /sitecore/content/AvenueClothing/Data Sources/Banner Messages/Abandoned Checkout
 DB: master
 Languages:
 - Language: en
@@ -12,17 +12,18 @@ Languages:
     - ID: "0d87482c-3b8e-4907-a9d7-a2a8591dbbd8"
       Hint: Image
       Value: |
-        <image mediaid="{CE7760D2-2EA4-47B5-A9E3-EECD6E7250B8}" />
+        <image mediaid="{486AB698-E27D-4D70-95CD-9EC061D5E530}" />
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20170116T113915Z
+      Value: 20170117T121953Z
     - ID: "34dc4d2d-413d-4a28-abb9-e406814cf48b"
       Hint: Title
-      Value: Get you order tomorrow
+      Value: Hey <first name>,
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: |
         sitecore\admin
     - ID: "fd006497-82ed-43b0-bb6a-8c572ac438e4"
       Hint: Message
-      Value: Place you order before 4 p.m. and get it tomorrow.
+      Value: |
+        Complete the checkout and get 10% discount by using the "demo" vourcher.
