--- a/src/AvenueClothing.Project.UserFeedback/AvenueClothing.Project.UserFeedback.csproj
+++ b/src/AvenueClothing.Project.UserFeedback/AvenueClothing.Project.UserFeedback.csproj
@@ -148,6 +148,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AvenueClothing.Foundation.MvcExtensions\AvenueClothing.Foundation.MvcExtensions.csproj">
