--- a/src/AvenueClothing.Project.Header/AvenueClothing.Project.Header.csproj
+++ b/src/AvenueClothing.Project.Header/AvenueClothing.Project.Header.csproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Views\Header\Rendering.cshtml" />
+    <Content Include="Views\web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HeaderController.cs" />
