--- a/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
+++ b/src/AvenueClothing.Project.Website/AvenueClothing.Project.Website.csproj
@@ -255,6 +255,7 @@
     <Content Include="Views\Footer\Rendering.cshtml" />
     <Content Include="Views\Sidebar Static Content\Rendering.cshtml" />
     <Content Include="Views\Email.cshtml" />
+    <Content Include="Views\web.config" />
     <None Include="Views\Web.config.default" />
   </ItemGroup>
   <ItemGroup>
