--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Data Sources/Banner Messages/Basket is not empty.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing/Data Sources/Banner Messages/Basket is not empty.yml
@@ -18,11 +18,11 @@ Languages:
       Value: 20170116T113915Z
     - ID: "34dc4d2d-413d-4a28-abb9-e406814cf48b"
       Hint: Title
-      Value: Get you order tomorrow
+      Value: Get you order tomorrow!
     - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
       Hint: __Created by
       Value: |
         sitecore\admin
     - ID: "fd006497-82ed-43b0-bb6a-8c572ac438e4"
       Hint: Message
-      Value: Place you order before 4 p.m. and get it tomorrow.
+      Value: Place you order before 4 P.M. and get it tomorrow.
